# mkdocs-images-to-webp

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
mkdocs_images_to_webp/: plugin.py
mkdocs_png_to_webp/: plugin.py
