[project]
name = "mkdocs-images-to-webp"
version = "0.4"
dependencies = [
    'mkdocs==1.4.2',
    'pillow',
    'importlib-metadata; python_version>"3.8"',
]
keywords = ['mkdocs', 'images', 'webp']

[project.urls]
download_url = 'https://github.com/mur4d1n-lib/mkdocs-images-to-webp/archive/refs/tags/v_03.tar.gz'

[project.entry-points."mkdocs.plugins"]
images-to-webp = "mkdocs_images_to_webp.plugin:ConvertImagesToWebpPlugin"
