[metadata]
name = mkdocs-images-to-webp
version = 0.3
download_url = https://github.com/mur4d1n-lib/mkdocs-images-to-webp/archive/refs/tags/v_03.tar.gz

[options]
install_requires =
  mkdocs
  pillow
  importlib-metadata; python_version > "3.8"
entry_points =
  images-to-webp = mkdocs_images_to_webp.plugin:ConvertImagesToWebpPlugin